--- a/cadc-inventory-db/build.gradle
+++ b/cadc-inventory-db/build.gradle
@@ -11,6 +11,8 @@ repositories {
     mavenLocal()
 }
 
+apply from: '../opencadc.gradle'
+
 sourceCompatibility = 1.8
 
 group = 'org.opencadc'
@@ -19,10 +21,9 @@ version = '0.1'
 
 dependencies {
     compile 'log4j:log4j:[1.2,)'
-    compile 'org.opencadc:cadc-inventory:[0.1,)'
+    compile 'org.opencadc:cadc-inventory:[0.3,)'
 
     testCompile 'junit:junit:[4.0,)'
+    
+    intTestRuntime 'org.postgresql:postgresql:[42.2.8,)'
 }
-
-apply from: '../opencadc.gradle'
-
