--- a/cadc-storage-permissions/build.gradle
+++ b/cadc-storage-permissions/build.gradle
@@ -20,6 +20,7 @@ version = '0.1'
 dependencies {
     compile 'log4j:log4j:[1.2,)'
     compile 'org.opencadc:cadc-inventory:[0.1,)'
+    compile 'org.opencadc:cadc-gms:[1.0,)'
 
     testCompile 'junit:junit:[4.0,)'
 }
