--- a/cadc-storage-adapter/build.gradle
+++ b/cadc-storage-adapter/build.gradle
@@ -19,7 +19,8 @@ version = '0.1'
 
 dependencies {
     compile 'log4j:log4j:[1.2,)'
-    compile 'org.opencadc:cadc-inventory:[0.1,)'
+    compile 'org.opencadc:cadc-util:[1.2.25,)'
+    compile 'org.opencadc:cadc-inventory:[0.3,)'
 
     testCompile 'junit:junit:[4.0,)'
 }
