--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,10 +18,10 @@ jobs:
     - name: verify storage-inventory-dm
       run: cd storage-inventory-dm && gradle --info clean build
     - name: build and test cadc-inventory
-      run: cd cadc-inventory && gradle --info clean build javadoc checkstyleMain
+      run: cd cadc-inventory && gradle --info clean build javadoc checkstyleMain install
     - name: build and test cadc-inventory-db
-      run: cd cadc-inventory-db && gradle --info clean build javadoc checkstyleMain
+      run: cd cadc-inventory-db && gradle --info clean build javadoc checkstyleMain  install
     - name: build and test cadc-storage-adapter
-      run: cd cadc-storage-adapter && gradle --info clean build javadoc checkstyleMain
+      run: cd cadc-storage-adapter && gradle --info clean build javadoc checkstyleMain install
     - name: build and test cadc-storage-permissions
-      run: cd cadc-storage-permissions && gradle --info clean build javadoc checkstyleMain
+      run: cd cadc-storage-permissions && gradle --info clean build javadoc checkstyleMain install
