--- a/minoc/src/main/webapp/WEB-INF/web.xml
+++ b/minoc/src/main/webapp/WEB-INF/web.xml
@@ -83,7 +83,7 @@
 
   <servlet-mapping>
     <servlet-name>ArtifactsServlet</servlet-name>
-    <url-pattern>/artifacts/*</url-pattern>
+    <url-pattern>/files/*</url-pattern>
   </servlet-mapping>
   
   <!-- Availability servlet endpoint -->
