--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,7 +27,13 @@ jobs:
       run: cd cadc-storage-permissions && gradle --info clean build javadoc checkstyleMain install
 
     - name: Build minoc
-      run: cd minoc && docker build . --file Dockerfile --tag minoc:$(date +%s)
+      run: cd minoc && gradle --info clean build javadoc checkstyleMain
     - name: Build luskan
-      run: test -d luskan && (cd luskan && docker build . --file Dockerfile --tag luskan:$(date +%s)) || echo "not found"
+      run: test -d luskan && && gradle --info clean build javadoc checkstyleMain
+
+## TODO: docker build depends on cadc-tomcat base image from docker-base.git
+#    - name: Build minoc
+#      run: cd minoc && docker build . --file Dockerfile --tag minoc:$(date +%s)
+#    - name: Build luskan
+#      run: test -d luskan && (cd luskan && docker build . --file Dockerfile --tag luskan:$(date +%s)) || echo "not found"
 
