--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -26,14 +26,14 @@ jobs:
     - name: build and test cadc-storage-permissions
       run: cd cadc-storage-permissions && gradle --info clean build javadoc checkstyleMain install
 
-    - name: Build minoc
+    - name: java build: minoc 
       run: cd minoc && gradle --info clean build javadoc checkstyleMain
-    - name: Build luskan
-      run: test -d luskan && && gradle --info clean build javadoc checkstyleMain
+    - name: java build: luskan
+      run: test -d luskan && (cd luskan && gradle --info clean build javadoc checkstyleMain) || echo "not found"
 
 ## TODO: docker build depends on cadc-tomcat base image from docker-base.git
-#    - name: Build minoc
+#    - name: docker build: minoc
 #      run: cd minoc && docker build . --file Dockerfile --tag minoc:$(date +%s)
-#    - name: Build luskan
+#    - name: docker build: luskan
 #      run: test -d luskan && (cd luskan && docker build . --file Dockerfile --tag luskan:$(date +%s)) || echo "not found"
 
