--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,8 +15,8 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: verify storage-inventory-dm
-      run: cd storage-inventory-dm && gradle --info clean build
+    - name: build and test storage-inventory-dm
+      run: cd storage-inventory-dm && gradle --info clean build xslt
     - name: build and test cadc-inventory
       run: cd cadc-inventory && gradle --info clean build javadoc checkstyleMain install
     - name: build and test cadc-inventory-db
