--- a/luskan/src/main/webapp/WEB-INF/web.xml
+++ b/luskan/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
     <servlet-class>ca.nrc.cadc.log.LogControlServlet</servlet-class>
     <init-param>
       <param-name>logLevel</param-name>
-      <param-value>info</param-value>
+      <param-value>debug</param-value>
     </init-param>
     <init-param>
       <param-name>logLevelPackages</param-name>
@@ -23,6 +23,8 @@
         ca.nrc.cadc.net
         ca.nrc.cadc.auth
         ca.nrc.cadc.vosi
+        ca.nrc.cadc.uws.server
+        ca.nrc.cadc.db
       </param-value>
     </init-param>
     <init-param>
