--- a/luskan/Dockerfile
+++ b/luskan/Dockerfile
@@ -1,5 +1,4 @@
 FROM cadc-tomcat:latest
 
-RUN mkdir /root/config
-COPY src/main/resources/LocalAuthority.properties /root/config/
+RUN ln -s /conf /root/config
 COPY build/libs/*.war /usr/share/tomcat/webapps
