--- a/luskan/src/main/webapp/WEB-INF/web.xml
+++ b/luskan/src/main/webapp/WEB-INF/web.xml
@@ -4,14 +4,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-  <display-name>luskan_ws</display-name>
+  <display-name>luskan</display-name>
 
   <servlet>
     <servlet-name>logControl</servlet-name>
     <servlet-class>ca.nrc.cadc.log.LogControlServlet</servlet-class>
     <init-param>
       <param-name>logLevel</param-name>
-      <param-value>debug</param-value>
+      <param-value>info</param-value>
     </init-param>
     <init-param>
       <param-name>logLevelPackages</param-name>
@@ -56,11 +56,11 @@
         
         <init-param>
             <param-name>ca.nrc.cadc.uws.server.JobManager</param-name>
-            <param-value>ca.nrc.cadc.luskan.ws.QueryJobManager</param-value>
+            <param-value>org.opencadc.luskan.ws.QueryJobManager</param-value>
         </init-param>
         <init-param>
             <param-name>ca.nrc.cadc.rest.InlineContentHandler</param-name>
-            <param-value>ca.nrc.cadc.tap.impl.TapUploadInlineContentHandler</param-value>
+            <param-value>org.opencadc.luskan.impl.TempStorageManager</param-value>
         </init-param>
         
         <load-on-startup>2</load-on-startup>
@@ -80,7 +80,7 @@
 
         <init-param>
             <param-name>ca.nrc.cadc.uws.server.JobManager</param-name>
-            <param-value>ca.nrc.cadc.luskan.ws.QueryJobManager</param-value>
+            <param-value>org.opencadc.luskan.ws.QueryJobManager</param-value>
         </init-param>
         <init-param>
             <param-name>ca.nrc.cadc.rest.InlineContentHandler</param-name>
@@ -88,6 +88,16 @@
         </init-param>
 
         <load-on-startup>2</load-on-startup>
+    </servlet>
+
+    <servlet>
+        <servlet-name>TempStorageServlet</servlet-name>
+        <servlet-class>ca.nrc.cadc.rest.RestServlet</servlet-class>
+        <init-param>
+        <param-name>get</param-name>
+            <param-value>org.opencadc.luskan.impl.TempStorageGetAction</param-value>
+        </init-param>
+        <load-on-startup>3</load-on-startup>
     </servlet>
 
     <servlet>
@@ -107,7 +117,7 @@
         <description>
         </description>
             <param-name>ca.nrc.cadc.vosi.AvailabilityPlugin</param-name>
-            <param-value>ca.nrc.cadc.luskan.ws.StorageTapService</param-value>
+            <param-value>org.opencadc.luskan.ws.StorageTapService</param-value>
         </init-param>
         <load-on-startup>3</load-on-startup>
     </servlet>
@@ -168,6 +178,11 @@
   <servlet-mapping>
     <servlet-name>TableServlet</servlet-name>
     <url-pattern>/auth-tables/*</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>TempStorageServlet</servlet-name>
+    <url-pattern>/results/*</url-pattern>
   </servlet-mapping>
 
   <!-- Define a security constraint for auth servlet -->
