--- a/luskan/build.gradle
+++ b/luskan/build.gradle
@@ -8,9 +8,6 @@ plugins {
 repositories {
     jcenter()
     mavenLocal()
-    maven {
-        url = 'http://www.cadc-ccda.hia-iha.nrc-cnrc.gc.ca/m2repo'
-    }
 }
 
 apply from: '../opencadc.gradle'
@@ -34,19 +31,17 @@ dependencies {
     compile 'org.jdom:jdom2:[2.0,)'
 
     compile 'org.opencadc:cadc-adql:[1.1,)'
-    compile 'org.opencadc:cadc-access-control:[1.1.1)'
+    compile 'org.opencadc:cadc-access-control:[1.1.1,)'
     compile 'org.opencadc:cadc-uws:[1.0.2,)'
     compile 'org.opencadc:cadc-uws-server:[1.2.5,)'
     compile 'org.opencadc:cadc-dali:[1.1,)'
     compile 'org.opencadc:cadc-tap-server:[1.1.9,)'
     compile 'org.opencadc:cadc-tap-schema:[1.1.9,)'
     compile 'org.opencadc:cadc-tap-server-pg:[1.0.5,)'
-    compile 'ca.nrc.cadc:tap-util:[1.1.5,)'
 
     runtime 'org.opencadc:cadc-registry:[1.4.6,)'
     runtime 'org.opencadc:cadc-rest:[1.2.8,)'
     runtime 'org.opencadc:cadc-vosi:[1.0,)'
-    runtime 'ca.nrc.cadc:ws-util:[1.0,)'
 
     testCompile 'junit:junit:[4.0,)'
 
@@ -61,3 +56,4 @@ configurations {
   runtime.exclude group: 'net.sourceforge.jtds'
   runtime.exclude group: 'org.restlet.jee'
 }
+
