--- a/luskan/src/main/resources/PluginFactory.properties
+++ b/luskan/src/main/resources/PluginFactory.properties
@@ -5,22 +5,21 @@
 
 # configure supported values of LANG parameter and the TapQuery implementation
 ca.nrc.cadc.tap.TapQuery.langValues = ADQL ADQL-2.0
-ADQL =     org.opencadc.luskan.impl.AdqlQueryImpl
-ADQL-2.0 = org.opencadc.luskan.impl.AdqlQueryImpl
+ADQL =     org.opencadc.luskan.AdqlQueryImpl
+ADQL-2.0 = org.opencadc.luskan.AdqlQueryImpl
 
-# TBD - ca.nrc.cadc.tap.MaxRecValidator
-# ca.nrc.cadc.tap.MaxRecValidator = ca.nrc.cadc.cat.impl.MaxRecValidatorImpl
+# ca.nrc.cadc.tap.MaxRecValidator =
 
 ca.nrc.cadc.tap.db.DatabaseDataType=ca.nrc.cadc.tap.pg.PostgresDataTypeMapper
 
-#ca.nrc.cadc.tap.UploadManager = ca.nrc.cadc.cat.impl.UploadManagerImpl
+#ca.nrc.cadc.tap.UploadManager =
 
 #ca.nrc.cadc.tap.TableWriter = ca.nrc.cadc.tap.DefaultTableWriter
 
-#ca.nrc.cadc.tap.writer.format.FormatFactory = ca.nrc.cadc.cat.impl.FormatFactoryImpl
+#ca.nrc.cadc.tap.writer.format.FormatFactory =
 
-ca.nrc.cadc.tap.ResultStore = org.opencadc.luskan.impl.TempStorageManager
+ca.nrc.cadc.tap.ResultStore = org.opencadc.luskan.TempStorageManager
 
-#ca.nrc.cadc.tap.schema.TapSchemaDAO = ca.nrc.cadc.cat.impl.TapSchemaDAOImpl
+#ca.nrc.cadc.tap.schema.TapSchemaDAO =
 
-#ca.nrc.cadc.vosi.actions.DataSourceProvider = ca.nrc.cadc.cat.ws.DataSourceProviderImpl
+#ca.nrc.cadc.vosi.actions.DataSourceProvider =
